<package>
  <name>darc_component</name>
  <version>0.2.0</version>
  <description>DARC Component Functionality</description>
  <author>Morten Kjaergaard</author>
  <maintainer email="none@none.com">Morten Kjaergaard</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>iris</run_depend>
  <run_depend>darc_common</run_depend>
  <run_depend>darc_ns</run_depend>
  <run_depend>darc_pubsub</run_depend>
  <run_depend>darc_procedure</run_depend>

  <build_depend>iris</build_depend>
  <build_depend>darc_common</build_depend>
  <build_depend>darc_ns</build_depend>
  <build_depend>darc_pubsub</build_depend>
  <build_depend>darc_procedure</build_depend>
</package>
